--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*Home*/
 /* CSS for Carousel */
+/* update */
 .cars {
   height: 500px; /* Fix the height for all carousel items */
   overflow: hidden; /* Ensure no overflow from large images */
